--- a/src/editor.html
+++ b/src/editor.html
@@ -2,6 +2,12 @@
   <div class="section gf-form-group">
     <h5 class="section-heading">General</h5>
     <div class="gf-form">
+      <span class="gf-form-label width-8">x_axis</span>
+      <div class="gf-form-select-wrapper max-width-10">
+        <select class="gf-form-input" ng-model="ctrl.panel.x_axis" ng-options="t for t in ['ep']" ng-change="ctrl.render()"></select>
+      </div>
+    </div>
+    <!-- <div class="gf-form">
       <span class="gf-form-label width-8">Type</span>
       <div class="gf-form-select-wrapper max-width-10">
         <select class="gf-form-input" ng-model="ctrl.panel.pieType" ng-options="t for t in ['pie', 'donut']" ng-change="ctrl.render()"></select>
@@ -23,7 +29,7 @@
       <span class="gf-form-label width-8">Divider width</span>
       <input type="text" class="gf-form-input max-width-10" ng-model="ctrl.panel.strokeWidth" ng-change="ctrl.render()">
     </div>
-  </div>
+  </div> -->
 
   <div class="section gf-form-group">
     <h5 class="section-heading">Legend</h5>
@@ -43,7 +49,7 @@
     <div ng-if="ctrl.panel.legendType == 'Under graph'" class="gf-form">
       <span class="gf-form-label width-11">Legend Breakpoint</span>
       <div class="gf-form-select-wrapper width-9">
-        <select class="gf-form-input" ng-model="ctrl.panel.breakPoint" ng-options="t for t in ['25%', '50%', '75%', '100%']"
+        <select class="gf-form-input" ng-model="ctrl.panel.breakPoint" ng-options="t for t in ['10%','25%', '50%', '75%', '100%']"
           ng-change="ctrl.render()"></select>
       </div>
     </div>
