--- a/src/editor.html
+++ b/src/editor.html
@@ -10,7 +10,7 @@
     <div class="gf-form">
       <span class="gf-form-label width-8">ignore columns</span>
       <div class="gf-form-select-wrapper max-width-10">
-        <select class="gf-form-input" ng-model="ctrl.panel.ignoreColumns" ng-options="t for t in ['experiment','ep']" ng-change="ctrl.render()"></select>
+        <select class="gf-form-input" ng-model="ctrl.panel.ignoreColumn" ng-options="t for t in ctrl.panel.ignoreColumns" ng-change="ctrl.render()" multiple></select>
       </div>
     </div>
     <!-- <div class="gf-form">
