--- a/src/editor.html
+++ b/src/editor.html
@@ -8,9 +8,15 @@
       </div>
     </div>
     <div class="gf-form">
-      <span class="gf-form-label width-8">ignore columns</span>
+      <span class="gf-form-label width-8">y_axis</span>
       <div class="gf-form-select-wrapper max-width-10">
-        <select class="gf-form-input" ng-model="ctrl.panel.ignoreColumn" ng-options="t for t in ctrl.panel.ignoreColumns" ng-change="ctrl.render()" multiple></select>
+        <select class="gf-form-input" ng-model="ctrl.panel.y_axis" ng-options="t for t in ctrl.panel.yColumns" ng-change="ctrl.render()"></select>
+      </div>
+    </div>
+    <div class="gf-form">
+      <span class="gf-form-label width-8">z_axis</span>
+      <div class="gf-form-select-wrapper max-width-10">
+        <select class="gf-form-input" ng-model="ctrl.panel.z_axis" ng-options="t for t in ctrl.panel.zColumns" ng-change="ctrl.render()"></select>
       </div>
     </div>
     <!-- <div class="gf-form">
