--- a/src/module.html
+++ b/src/module.html
@@ -1,5 +1,5 @@
-<div class="linechart-panel" ng-class="{'linechart-panel--legend-right': ctrl.panel.legendType == 'Right side'}">
-  <div class="linechart-panel__chart"></div>
-  <div class="linechart-legend" ng-if="ctrl.panel.legend.show" linechart-legend></div>
+<div class="heatmapchart-panel" ng-class="{'heatmapchart-panel--legend-right': ctrl.panel.legendType == 'Right side'}">
+  <div class="heatmapchart-panel__chart"></div>
+  <div class="heatmapchart-legend" ng-if="ctrl.panel.legend.show" heatmapchart-legend></div>
 </div>
 <div class="clearfix"></div>
